--- a/style.css
+++ b/style.css
@@ -1,33 +1,35 @@
 @import url(https://fonts.googleapis.com/css?family=Oswald);
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
 
 body{
   color: #fff;
-  font-size: 1.3rem;
-  font-family: Oswald;
+  font-size: 1.3em;
+  font-family: "Open Sans";
   background-color:#013159;
+  margin:0;
 }
 
-li{
-  list-style-type: none;
-}
 .navbar{
   margin: 0 auto;
   background-color: #024076;
   display: grid;
   height: 4rem;
+  width:100vw;
+  border-bottom:3px solid #096CBA;
 }
 
 .navbar::after{
-  content:"";
-  border: 4px solid #096CBA;
-  background-color: #096CBA;
+  /* content:""; */
+  font-size: 1px;
+  border: 1px solid #096CBA;
+  /* background-color: #096CBA; */
 }
 .primary-nav{
-  display:flex;
-  width: 50%;
+  display:grid;
+  grid-template-columns: repeat(5, 1fr);
+  width: 90%;
   height:100%;
   margin: auto;
-  justify-content: space-around;
   align-items:center;
   overflow:hidden;
 }
@@ -38,8 +40,7 @@ li{
   height: 100%;
   text-align: center;
   vertical-align: bottom;
-  padding:30px 5px 0 5px;
-  
+  list-style-type: none;
 }
 
 .nav-item:hover{
@@ -49,9 +50,65 @@ li{
 
 .nav-link{
   height:100%;
+  /* text-align: center; */
   vertical-align: bottom;
-  padding:40px 0 ;
+  padding:40px auto;
+  display: flex;
+  /* align-items: baseline; */
+  justify-content: space-around;
+  align-items: center;
   overflow:hidden;
 }
 
+.hamburger-btn{
+  display: none;
+}
 
+@media screen and (max-width: 768px){
+  *{
+    margin: 0;
+  }
+  .hamburger-btn{
+    display: flex;
+    position: fixed;
+    right: 6%;
+    top: 3.5%;
+    transform: scale(1.5);
+  }
+
+  .primary-nav {
+    display: none;
+    margin:0;
+    padding:0;
+  }
+
+  .active{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin: 0;
+    transition: ease-in 0.6s;
+  }
+
+  .active .nav-item{
+    margin: 0;
+    width: 100vw;
+  }
+
+  .navbar{
+    width:100vw;
+  }
+  .navbar .active::before{
+    content:"";
+    margin-top: 4rem;
+
+  }
+
+  .nav-item{
+    margin:0;
+    padding: 2vh;
+    width: 100vw;
+  }
+
+}
